# 03aDataParsingServer

./: 03aDataParsingServer.sln
CSharpServer/: Program.cs
PythonServer/: PythonServer.py  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
